compiler/testData/diagnostics/tests/overload/ConflictingOverloadsIdenticalExtFunsInPackage.fir.kt
package extensionFunctions

fun Int.<!CONFLICTING_OVERLOADS!>qwe<!>(a: Float) = 1

fun Int.<!CONFLICTING_OVERLOADS!>qwe<!>(a: Float) = 2
